# claudesk

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  TODO.md  package.json  pyproject.toml
.agents/skills/typecheck/: SKILL.md
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/skills/manual-test/: SKILL.md
.maestro/sessions/: 0342a49f-4adb-45de-97c6-92b016014d47.json  139669d9-40ce-4577-894e-ee79729ffc74.json  d4af4ae2-057f-4b1e-b51a-972df5c97f5d.json
claudesk/: cli.py
scripts/: claude-wrapper
src/: agents.ts  config.ts  markdown.ts  persistence.ts  server.ts  sessions.ts  types.ts
src/templates/: components.ts  layout.ts  session-detail.ts  sidebar.ts
static/: app.js  htmx-sse.js  style.css
