[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudesk"
version = "0.1.0"
description = "Interactive dashboard for launching and managing Claude Code agent sessions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
claudesk = "claudesk.cli:main"
